# omp-task-bench

./: .gitignore  COPYING  README.md
taskbenchmark/: CMakeLists.txt
taskbenchmark/src/: hetero_util.c  hetero_util.h  omp_bench.c  util.c  util.h
tasklib/: CMakeLists.txt
tasklib/include/: tasklib.h
tasklib/src/: tasklib.c
